ipc/ipdl/test/ipdl/error/manageSelfToplevel.ipdl
protocol manageSelfToplevel {
    manager manageSelfToplevel;
    manages manageSelfToplevel;

child:
    manageSelfToplevel();
    __delete__();
};
